# advent-of-code-2022-rust

./: Cargo.toml  README.md
scripts/: fetch-input.sh
src/: lib.rs  main.rs
