[package]
name = "aoc"
version = "0.1.0"
authors = ["Eduardo S."]
edition = "2021"
default-run = "aoc"

[lib]
proc-macro = true

[dependencies]
regex = "1.5"
once_cell = "1.16"
syn = { version = "1.0.103", features = ["full"] }
quote = "1.0.21"
itertools = "0.10.5"
hashbrown = "0.13.1"
pathfinding = "4.0.0"
rusttype = "0.9.2"
rayon = "1.6.1"
